[package]
name = "intertense"
version = "0.2.0"
edition = "2024"

[dependencies]
b-k-tree = { version = "0.5.0", optional = true}
burn = { version = "0.21", optional = true}
dashmap = "6"
image = { version = "0.25", optional = true}
ndarray = { version = "0.17", optional = true}
rand = "0.10"
#num-traits = "0.2"
serde = { version = "1", features = ["derive","rc"], optional = true }
typeid = "1"
umya-spreadsheet = { version = "2", optional = true}

[features]
default = ["serial"]
burn-ml = ["burn"]
image-image = ["image"]
match-tensor = []
nd-array = ["ndarray"]
serial = ["serde"]
umya-sheet = ["b-k-tree", "umya-spreadsheet"]

[profile.test]
opt-level = 3
